Add new button type

--- a/Sources/SwiftUIKit/Resources/Localizable.xcstrings
+++ b/Sources/SwiftUIKit/Resources/Localizable.xcstrings
@@ -176,6 +176,16 @@
         }
       }
     },
+    "Button.Save" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Save"
+          }
+        }
+      }
+    },
     "Button.Search" : {
       "localizations" : {
         "en" : {
