Update release notes

--- a/Sources/SwiftUIKit/Resources/Localizable.xcstrings
+++ b/Sources/SwiftUIKit/Resources/Localizable.xcstrings
@@ -16,6 +16,9 @@
     "1" : {
 
     },
+    "Back" : {
+
+    },
     "Button.Add" : {
       "localizations" : {
         "en" : {
@@ -225,6 +228,12 @@
           }
         }
       }
+    },
+    "Flip" : {
+
+    },
+    "Front" : {
+
     },
     "Preview.Page.%@" : {
       "localizations" : {
